update header and gallery page

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -439,16 +439,18 @@
                 <h1>COMMENTS</h1>
                 <div class="main__comments-list">
                   <div class="row">
-                    <div class="col-2">
+                    <div class="col-12 col-sm-2">
                       <img src="./images/blog/blog-14.jpeg" alt="blogger" />
                     </div>
-                    <div class="col-10">
+                    <div class="col-12 col-sm-10">
                       <div class="main__detail-title">
                         <div class="main__detail-name">
                           <span>14, December 2017</span>
                           <h1>JOHN MAYER</h1>
                         </div>
-                        <div class="main__detail-reply">Reply</div>
+                        <div class="main__detail-reply" id="reply-01">
+                          Reply
+                        </div>
                       </div>
                       <div class="main__detail-writer">
                         <p>
@@ -460,7 +462,91 @@
                           tempus, tellus eget condimentum rhoncus.
                         </p>
                       </div>
-                      <div class="main__detail-comments"></div>
+                      <div class="main__detail-comments" id="for-reply-01">
+                        <div class="main__detail-commentsFor">
+                          <p>
+                            REPLY TO JOHN MAYER &nbsp;
+                            <span id="reply-02">Cancel reply</span>
+                          </p>
+                        </div>
+                        <div class="main__detail-commentsInput">
+                          <textarea
+                            placeholder="Your comment"
+                            rows="10"
+                          ></textarea>
+                          <div class="main__detail-commentsAuthor">
+                            <div class="main__detail-commentsList">
+                              <input type="text" placeholder="Your Name" />
+                            </div>
+                            <div class="main__detail-commentsList">
+                              <input type="text" placeholder="Your Email" />
+                            </div>
+                          </div>
+                          <label for="blog-save"
+                            ><input type="checkbox" id="blog-save" /> &nbsp;Save
+                            my name, email, and website in this browser for the
+                            next time I comment.</label
+                          >
+                        </div>
+                        <button type="submit">SUBMIT</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="main__comments-line"></div>
+                <div class="main__comments-list">
+                  <div class="row">
+                    <div class="col-12 col-sm-2">
+                      <img src="./images/blog/blog-15.jpeg" alt="blogger" />
+                    </div>
+                    <div class="col-12 col-sm-10">
+                      <div class="main__detail-title">
+                        <div class="main__detail-name">
+                          <span>14, December 2017</span>
+                          <h1>JOHN MAYER</h1>
+                        </div>
+                        <div class="main__detail-reply" id="reply-03">
+                          Reply
+                        </div>
+                      </div>
+                      <div class="main__detail-writer">
+                        <p>
+                          Aliquam lorem ante, dapibus in, viverra quis, feugiat
+                          a, tellus. Phasellus viverra nulla ut metus varius
+                          laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+                          ultricies nisi vel augue. Curabitur ullamcorper
+                          ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas
+                          tempus, tellus eget condimentum rhoncus.
+                        </p>
+                      </div>
+                      <div class="main__detail-comments" id="for-reply-02">
+                        <div class="main__detail-commentsFor">
+                          <p>
+                            REPLY TO JOHN MAYER &nbsp;
+                            <span id="reply-04">Cancel reply</span>
+                          </p>
+                        </div>
+                        <div class="main__detail-commentsInput">
+                          <textarea
+                            placeholder="Your comment"
+                            rows="10"
+                          ></textarea>
+                          <div class="main__detail-commentsAuthor">
+                            <div class="main__detail-commentsList">
+                              <input type="text" placeholder="Your Name" />
+                            </div>
+                            <div class="main__detail-commentsList">
+                              <input type="text" placeholder="Your Email" />
+                            </div>
+                          </div>
+                          <label for="blog-save"
+                            ><input type="checkbox" id="blog-save" /> &nbsp;Save
+                            my name, email, and website in this browser for the
+                            next time I comment.</label
+                          >
+                        </div>
+                        <button type="submit">SUBMIT</button>
+                      </div>
                     </div>
                   </div>
                 </div>
