--- a/contact.html
+++ b/contact.html
@@ -67,32 +67,32 @@
             <!-- menu main -->
             <div class="header__menu-list">
               <ul class="menu-main">
-                <li class="scroll"><a href="index.html">HOME</a></li>
-                <li class="scroll">
-                  <a href="#">ROOMS</a>
+                <li><a class="scroll" href="index.html">HOME</a></li>
+                <li>
+                  <a class="scroll" href="standard-room-list.html">ROOMS</a>
                   <ul>
                     <li>
-                      <a href="#">Room list</a>
+                      <a href="standard-room-list.html">Room list</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard</a></li>
-                        <li><a href="#">Deluxe</a></li>
-                        <li><a href="#">Family</a></li>
+                        <li><a href="standard-room-list.html">Standard</a></li>
+                        <li><a href="standard-room-list.html">Deluxe</a></li>
+                        <li><a href="standard-room-list.html">Family</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="single-room.html">Single Room</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard VIP</a></li>
-                        <li><a href="#">Deluxe VIP</a></li>
-                        <li><a href="#">Family VIP</a></li>
+                        <li><a href="single-room.html">Standard VIP</a></li>
+                        <li><a href="single-room.html">Deluxe VIP</a></li>
+                        <li><a href="single-room.html">Family VIP</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">PAGES</a>
+                <li>
+                  <a class="scroll" href="#">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -102,16 +102,16 @@
                     <li><a href="404.html">404 Error Page</a></li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">BLOG</a>
+                <li>
+                  <a class="scroll" href="blog.html">BLOG</a>
                   <ul>
                     <li>
-                      <a href="#">Masonry</a>
+                      <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
                       </ul>
                     </li>
                     <li>
@@ -134,8 +134,8 @@
                     </li>
                   </ul>
                 </li>
-                <li class="scroll"><a href="#">PORTFOLIO</a></li>
-                <li class="scroll"><a href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="#">PORTFOLIO</a></li>
+                <li><a class="scroll" href="#">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -160,28 +160,28 @@
           <h1>MENU</h1>
           <li class="scroll"><a href="index.html">HOME</a></li>
           <li class="scroll">
-            <a href="#">ROOMS</a>
+            <a href="standard-room-list.html">ROOMS</a>
             <span id="span-1">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-1">
               <li>
-                <a href="#">Room list</a>
+                <a href="standard-room-list.html">Room list</a>
                 <span id="span-2">
                   <i class="fas fa-sort-down"></i>
                 </span>
                 <ul class="span-2">
-                  <li><a href="#">Standard</a></li>
-                  <li><a href="#">Deluxe</a></li>
-                  <li><a href="#">Family</a></li>
+                  <li><a href="standard-room-list.html">Standard</a></li>
+                  <li><a href="standard-room-list.html">Deluxe</a></li>
+                  <li><a href="standard-room-list.html">Family</a></li>
                 </ul>
               </li>
               <li>
                 <a href="single-room.html">Single Room</a>
                 <ul>
-                  <li><a href="#">Standard VIP</a></li>
-                  <li><a href="#">Deluxe VIP</a></li>
-                  <li><a href="#">Family VIP</a></li>
+                  <li><a href="single-room.html">Standard VIP</a></li>
+                  <li><a href="single-room.html">Deluxe VIP</a></li>
+                  <li><a href="single-room.html">Family VIP</a></li>
                 </ul>
               </li>
             </ul>
@@ -201,13 +201,13 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">BLOG</a>
+            <a href="blog.html">BLOG</a>
             <span id="span-4">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-4">
               <li>
-                <a href="#">Masonry</a>
+                <a href="blog-detail.html">Masonry</a>
                 <span id="span-5">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -218,7 +218,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Standard</a>
+                <a href="blog-detail.html">Standard</a>
                 <span id="span-6">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -229,7 +229,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Single Post</a>
+                <a href="blog-detail.html">Single Post</a>
                 <span id="span-7">
                   <i class="fas fa-sort-down"></i>
                 </span>
