--- a/gallery.html
+++ b/gallery.html
@@ -68,32 +68,32 @@
             <!-- menu main -->
             <div class="header__menu-list">
               <ul class="menu-main">
-                <li class="scroll"><a href="index.html">HOME</a></li>
-                <li class="scroll">
-                  <a href="#">ROOMS</a>
+                <li><a class="scroll" href="index.html">HOME</a></li>
+                <li>
+                  <a class="scroll" href="standard-room-list.html">ROOMS</a>
                   <ul>
                     <li>
-                      <a href="#">Room list</a>
+                      <a href="standard-room-list.html">Room list</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard</a></li>
-                        <li><a href="#">Deluxe</a></li>
-                        <li><a href="#">Family</a></li>
+                        <li><a href="standard-room-list.html">Standard</a></li>
+                        <li><a href="standard-room-list.html">Deluxe</a></li>
+                        <li><a href="standard-room-list.html">Family</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="single-room.html">Single Room</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard VIP</a></li>
-                        <li><a href="#">Deluxe VIP</a></li>
-                        <li><a href="#">Family VIP</a></li>
+                        <li><a href="single-room.html">Standard VIP</a></li>
+                        <li><a href="single-room.html">Deluxe VIP</a></li>
+                        <li><a href="single-room.html">Family VIP</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">PAGES</a>
+                <li>
+                  <a class="scroll" href="#">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -103,16 +103,16 @@
                     <li><a href="404.html">404 Error Page</a></li>
                   </ul>
                 </li>
-                <li class="scroll">
-                  <a href="#">BLOG</a>
+                <li>
+                  <a class="scroll" href="blog.html">BLOG</a>
                   <ul>
                     <li>
-                      <a href="#">Masonry</a>
+                      <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
                       </ul>
                     </li>
                     <li>
@@ -135,8 +135,8 @@
                     </li>
                   </ul>
                 </li>
-                <li class="scroll"><a href="#">PORTFOLIO</a></li>
-                <li class="scroll"><a href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="#">PORTFOLIO</a></li>
+                <li><a class="scroll" href="#">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -161,28 +161,28 @@
           <h1>MENU</h1>
           <li class="scroll"><a href="index.html">HOME</a></li>
           <li class="scroll">
-            <a href="#">ROOMS</a>
+            <a href="standard-room-list.html">ROOMS</a>
             <span id="span-1">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-1">
               <li>
-                <a href="#">Room list</a>
+                <a href="standard-room-list.html">Room list</a>
                 <span id="span-2">
                   <i class="fas fa-sort-down"></i>
                 </span>
                 <ul class="span-2">
-                  <li><a href="#">Standard</a></li>
-                  <li><a href="#">Deluxe</a></li>
-                  <li><a href="#">Family</a></li>
+                  <li><a href="standard-room-list.html">Standard</a></li>
+                  <li><a href="standard-room-list.html">Deluxe</a></li>
+                  <li><a href="standard-room-list.html">Family</a></li>
                 </ul>
               </li>
               <li>
                 <a href="single-room.html">Single Room</a>
                 <ul>
-                  <li><a href="#">Standard VIP</a></li>
-                  <li><a href="#">Deluxe VIP</a></li>
-                  <li><a href="#">Family VIP</a></li>
+                  <li><a href="single-room.html">Standard VIP</a></li>
+                  <li><a href="single-room.html">Deluxe VIP</a></li>
+                  <li><a href="single-room.html">Family VIP</a></li>
                 </ul>
               </li>
             </ul>
@@ -202,13 +202,13 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">BLOG</a>
+            <a href="blog.html">BLOG</a>
             <span id="span-4">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-4">
               <li>
-                <a href="#">Masonry</a>
+                <a href="blog-detail.html">Masonry</a>
                 <span id="span-5">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -219,7 +219,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Standard</a>
+                <a href="blog-detail.html">Standard</a>
                 <span id="span-6">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -230,7 +230,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Single Post</a>
+                <a href="blog-detail.html">Single Post</a>
                 <span id="span-7">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -304,164 +304,165 @@
       </div>
       <!--end contact on header-->
     </div>
+    <div class="main">
+      <section class="gallery-banner">
+        <div class="gallery-banner__center">
+          <p>Conscious hospitality</p>
+          <h2>GALLERY</h2>
+          <div class="gallery-banner__line"></div>
+        </div>
+      </section>
 
-    <section class="gallery-banner">
-      <div class="gallery-banner__center">
-        <p>Conscious hospitality</p>
+      <section class="gallery-description">
         <h2>GALLERY</h2>
-        <div class="gallery-banner__line"></div>
-      </div>
-    </section>
+        <div class="gallery-description__line"></div>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. the when an unknown printer took a galley of type and
+          scrambled.
+        </p>
+      </section>
 
-    <section class="gallery-description">
-      <h2>GALLERY</h2>
-      <div class="gallery-description__line"></div>
-      <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. the when an unknown printer took a galley of type and
-        scrambled.
-      </p>
-    </section>
-
-    <section class="gallery-image">
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-01.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+      <section class="gallery-image">
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-01.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-02.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-02.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-03.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-03.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-04.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-04.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-05.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-05.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-06.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-06.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-07.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-07.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-08.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-08.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-09.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-09.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-10.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-10.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-11.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-11.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="gallery-image__item">
-        <img src="./images/gallery/gallery-12.jpeg" alt="gallery" />
-        <div class="grid-hover">
-          <div class="grid-hover__text">
-            <h3>THE WATCH</h3>
-            <div class="grid-hover__link">
-              <a href="#">Detail</a>
+        <div class="gallery-image__item" data-aos="flip-left">
+          <img src="./images/gallery/gallery-12.jpeg" alt="gallery" />
+          <div class="grid-hover">
+            <div class="grid-hover__text">
+              <h3>THE WATCH</h3>
+              <div class="grid-hover__link">
+                <a href="#">Detail</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
     <!-- start footer -->
     <div class="footer">
       <div class="container">
         <div class="footer__main">
-          <div class="row">
+          <div class="row gallery-footer">
             <div class="col-12 col-lg-4 d-flex flex-column">
               <h2>CONTACT</h2>
               <a
@@ -541,7 +542,7 @@
     <script src="./plugins/fontawesome/all.js"></script>
     <script src="./plugins/daterangepicker/daterangepicker.js"></script>
     <script src="./plugins/validation1.19.3/jquery.validate.min.js"></script>
-    <script src="./plugins/rating/rating.js"></script>
+    <script src="./plugins/rating/jquery.barrating.min.js"></script>
     <script src="./plugins/slick/slick.js"></script>
     <!-- Main JS-->
     <script src="./js/main.js"></script>
