--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -71,24 +71,24 @@
               <ul class="menu-main">
                 <li><a class="scroll" href="index.html">HOME</a></li>
                 <li>
-                  <a class="scroll" href="#">ROOMS</a>
+                  <a class="scroll" href="standard-room-list.html">ROOMS</a>
                   <ul>
                     <li>
-                      <a href="#">Room list</a>
+                      <a href="standard-room-list.html">Room list</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard</a></li>
-                        <li><a href="#">Deluxe</a></li>
-                        <li><a href="#">Family</a></li>
+                        <li><a href="standard-room-list.html">Standard</a></li>
+                        <li><a href="standard-room-list.html">Deluxe</a></li>
+                        <li><a href="standard-room-list.html">Family</a></li>
                       </ul>
                     </li>
                     <li>
                       <a href="single-room.html">Single Room</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Standard VIP</a></li>
-                        <li><a href="#">Deluxe VIP</a></li>
-                        <li><a href="#">Family VIP</a></li>
+                        <li><a href="single-room.html">Standard VIP</a></li>
+                        <li><a href="single-room.html">Deluxe VIP</a></li>
+                        <li><a href="single-room.html">Family VIP</a></li>
                       </ul>
                     </li>
                   </ul>
@@ -105,15 +105,15 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="scroll" href="#">BLOG</a>
+                  <a class="scroll" href="blog.html">BLOG</a>
                   <ul>
                     <li>
-                      <a href="#">Masonry</a>
+                      <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog.html">Lorem ipsum</a></li>
                       </ul>
                     </li>
                     <li>
@@ -162,28 +162,28 @@
           <h1>MENU</h1>
           <li class="scroll"><a href="index.html">HOME</a></li>
           <li class="scroll">
-            <a href="#">ROOMS</a>
+            <a href="standard-room-list.html">ROOMS</a>
             <span id="span-1">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-1">
               <li>
-                <a href="#">Room list</a>
+                <a href="standard-room-list.html">Room list</a>
                 <span id="span-2">
                   <i class="fas fa-sort-down"></i>
                 </span>
                 <ul class="span-2">
-                  <li><a href="#">Standard</a></li>
-                  <li><a href="#">Deluxe</a></li>
-                  <li><a href="#">Family</a></li>
+                  <li><a href="standard-room-list.html">Standard</a></li>
+                  <li><a href="standard-room-list.html">Deluxe</a></li>
+                  <li><a href="standard-room-list.html">Family</a></li>
                 </ul>
               </li>
               <li>
                 <a href="single-room.html">Single Room</a>
                 <ul>
-                  <li><a href="#">Standard VIP</a></li>
-                  <li><a href="#">Deluxe VIP</a></li>
-                  <li><a href="#">Family VIP</a></li>
+                  <li><a href="single-room.html">Standard VIP</a></li>
+                  <li><a href="single-room.html">Deluxe VIP</a></li>
+                  <li><a href="single-room.html">Family VIP</a></li>
                 </ul>
               </li>
             </ul>
@@ -203,13 +203,13 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">BLOG</a>
+            <a href="blog.html">BLOG</a>
             <span id="span-4">
               <i class="fas fa-sort-down"></i>
             </span>
             <ul class="span-4">
               <li>
-                <a href="#">Masonry</a>
+                <a href="blog-detail.html">Masonry</a>
                 <span id="span-5">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -220,7 +220,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Standard</a>
+                <a href="blog-detail.html">Standard</a>
                 <span id="span-6">
                   <i class="fas fa-sort-down"></i>
                 </span>
@@ -231,7 +231,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Single Post</a>
+                <a href="blog-detail.html">Single Post</a>
                 <span id="span-7">
                   <i class="fas fa-sort-down"></i>
                 </span>
