--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     />
 
     <!-- Vendor CSS Files cdn -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -39,7 +38,6 @@
     />
 
     <link rel="stylesheet" href="./plugins/fontawesome/all.css" />
-
     <link
       rel="stylesheet"
       href="./plugins/daterangepicker/daterangepicker.css"
@@ -266,25 +264,21 @@
           <h2>CONTACT</h2>
           <div>
             <a
-              href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
+              href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
               target="_blank"
               rel="noopener noreferrer"
-              >9 Crosby Street, New York City, NY</a
+              >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
             >
           </div>
 
           <div>
-            <a href="mailto:fivestar@qodeinteractive.com"
-              >fivestar@qodeinteractive.com</a
-            >
+            <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
           </div>
-          <div><a href="tel:(646)218-6400">( 646 ) 218-6400</a></div>
+          <div><a href="tel:0242 242 0777">0242 242 0777</a></div>
 
           <div class="footer__contact-icon">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-paypal"></i>
-            <i class="fab fa-cc-mastercard"></i>
-            <i class="fab fa-cc-mastercard"></i>
             <i class="fab fa-cc-mastercard"></i>
           </div>
         </div>
@@ -308,7 +302,7 @@
     <section class="banner">
       <div class="bannerSlider">
         <div class="banner__item">
-          <a href="#"
+          <a href="standard-room-list.html"
             ><img src="./images/banner/banner-01.jpeg" alt="banner web"
           /></a>
           <div class="banner__item-text">
@@ -320,7 +314,7 @@
           </div>
         </div>
         <div class="banner__item">
-          <a href="#"
+          <a href="standard-room-list.html"
             ><img src="./images/banner/banner-02.jpeg" alt="banner web"
           /></a>
           <div class="banner__item-text">
@@ -335,7 +329,11 @@
     </section>
 
     <section class="home-filter">
-      <form action="" method="post">
+      <form
+        action="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD
+    >"
+        method="post"
+      >
         <div class="home-filter-inner">
           <div class="home-filter__item">
             <span class="has-calendar">
@@ -409,12 +407,15 @@
               </select>
             </span>
           </div>
-          <button>BOOK NOW</button>
+          <a
+            href="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD"
+            ><button>BOOK NOW</button></a
+          >
         </div>
       </form>
     </section>
 
-    <section class="home-icons-group" data-aos="fade-up">
+    <section class="home-icons-group">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-xl-3 home__icon">
@@ -526,7 +527,7 @@
       </div>
     </section>
 
-    <section class="introduce" data-aos="fade-up">
+    <section class="introduce">
       <div class="container">
         <div class="introduce__title">
           <h3>INTRODUCE <br />YOUR STYLE</h3>
@@ -649,7 +650,7 @@
     <section class="home-wellcome">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6" data-aos="fade-right">
+          <div class="col-12 col-lg-6">
             <h2>FIND WHAT YOU NEED?</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
@@ -662,7 +663,7 @@
               dignissim.
             </p>
           </div>
-          <div class="col-12 col-lg-6 home-tabs" data-aos="fade-left">
+          <div class="col-12 col-lg-6 home-tabs">
             <div class="nav nav-tabs">
               <a class="active" data-toggle="tab" href="#booknow">BOOK NOW</a>
 
@@ -739,7 +740,7 @@
     <section class="home-contact">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6" data-aos="fade-right">
+          <div class="col-12 col-lg-6">
             <div class="contact__info">
               <div class="contact__info-top">
                 <h1>CONTACT US</h1>
@@ -751,29 +752,27 @@
               </div>
 
               <div class="row">
-                <div class="col-12 col-sm-6 company">
-                  <h3>BARCELONA</h3>
+                <div class="col-12 company">
+                  <h3>WEBHOTEL - GIẢI PHÁP BÁN PHÒNG CHUYÊN NGHIỆP</h3>
                   <div class="company__address">
                     <a
                       style="color: #999999"
-                      href="https://www.google.com/maps/place/Carrer+de+la+Diputaci%C3%B3,+316,+08009+Barcelona,+Spain/@41.3943376,2.1704294,17z/data=!3m1!4b1!4m13!1m7!3m6!1s0x12a49816718e30e5:0x44b0fb3d4f47660a!2sBarcelona,+Spain!3b1!8m2!3d41.3850639!4d2.1734035!3m4!1s0x12a4a2ef19d6d3d3:0x2c8581cade97958a!8m2!3d41.3943336!4d2.1726181?_ga=2.151007417.1616392348.1616635257-1602379502.1616635257"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      >198 West 21th Street, 721 Barcelona 20020</a
+                      href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
+                      >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
                     >
                   </div>
                   <div class="company__email">
-                    <a href="emailto:fivestar@qode.com" style="color: #999999"
-                      >Email: fivestar@qode.com</a
+                    <a href="mailto:info@webhotel.vn" style="color: #999999"
+                      >Email: info@webhotel.vn</a
                     >
                   </div>
                   <div class="company__phone">
-                    <a style="color: #999999" href="tel:+887678906"
-                      >Phone: +88 (0) 101 0000 000</a
+                    <a style="color: #999999" href="tel:0242 242 0777"
+                      >Phone: 0242 242 0777</a
                     >
                   </div>
                 </div>
-                <div class="col-12 col-sm-6">
+                <!-- <div class="col-12 col-sm-6">
                   <h3>NEW YORK</h3>
                   <div class="company__address">
                     <a
@@ -794,7 +793,7 @@
                       >Phone: +88 (0) 101 0000 000</a
                     >
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="contact__info-bottom">
                 <h3>CONNECT WITH US</h3>
@@ -815,7 +814,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-6 form-contact" data-aos="fade-left">
+          <div class="col-12 col-lg-6 form-contact">
             <form action="" method="post" id="form-contact">
               <input type="text" name="name" placeholder="Enter your name" />
               <input type="text" name="email" placeholder="Enter your email" />
@@ -823,7 +822,10 @@
                 name="message"
                 placeholder="Enter your message"
               ></textarea>
-              <a href="#"><button type="submit">BOOK NOW</button></a>
+              <a
+                href="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD"
+                ><button type="submit">BOOK NOW</button></a
+              >
             </form>
           </div>
         </div>
@@ -863,8 +865,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
@@ -921,27 +921,14 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-
+    <script src="./plugins/rating/jquery.barrating.min.js"></script>
     <script src="./plugins/masonry/masonry.pkgd.js"></script>
     <script src="./plugins/masonry/imagesloaded.pkgd.js"></script>
     <script src="./plugins/fontawesome/all.js"></script>
     <script src="./plugins/daterangepicker/daterangepicker.js"></script>
     <script src="./plugins/validation1.19.3/jquery.validate.min.js"></script>
-    <script src="./plugins/rating/rating.js"></script>
     <script src="./plugins/slick/slick.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS-->
     <script src="./js/main.js"></script>
-    <script>
-      AOS.init({
-        offset: 400,
-        duration: 1000,
-      });
-      document.onreadystatechange = function () {
-        if (document.readyState == "complete") {
-          AOS.refresh();
-        }
-      };
-    </script>
   </body>
 </html>
