--- a/single-room.html
+++ b/single-room.html
@@ -271,25 +271,21 @@
           <h2>CONTACT</h2>
           <div>
             <a
-              href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
+              href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
               target="_blank"
               rel="noopener noreferrer"
-              >9 Crosby Street, New York City, NY</a
+              >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
             >
           </div>
 
           <div>
-            <a href="mailto:fivestar@qodeinteractive.com"
-              >fivestar@qodeinteractive.com</a
-            >
+            <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
           </div>
-          <div><a href="tel:(646)218-6400">( 646 ) 218-6400</a></div>
+          <div><a href="tel:0242 242 0777">0242 242 0777</a></div>
 
           <div class="footer__contact-icon">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-paypal"></i>
-            <i class="fab fa-cc-mastercard"></i>
-            <i class="fab fa-cc-mastercard"></i>
             <i class="fab fa-cc-mastercard"></i>
           </div>
         </div>
@@ -774,7 +770,10 @@
                 <p>500$</p>
               </div>
               <div class="reservation__btn">
-                <button type="submit">CHECK RESERVATION</button>
+                <a
+                  href="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD"
+                  ><button type="submit">CHECK RESERVATION</button></a
+                >
               </div>
             </div>
           </div>
@@ -798,8 +797,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
